Cambios en index, en testimonios

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </p>
                 <div class="testimonio-info">
                   <p class="cliente">Carlos Figueroa</p>
-                  <p class="cargo">Desarrollador Full Stuck en Trenes Argentinos. </p>
+                  <p class="cargo">Cybersecurity | Ethical Hacking | Red Team. </p>
                 </div>
               </div>
             </div>
